--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 :root {
-    --bg-primary: #0b0b0f;
-    --bg-secondary: #10121a;
-    --text-primary: #e8ddc3;
-    --text-secondary: #d6c195;
+    --bg-primary: #0f0f14;
+    --bg-secondary: #0a0a0e;
+    --text-primary: #ceccc3;
+    --text-secondary: #efd8a6;
     --accent-one: #060713;
     --accent-two: #0f1925;
     --accent-three: #060713;
@@ -39,6 +39,7 @@ p {
 h1 {
     font-size: 36px;
 }
+
 
 h4 {
     font-size: 24px;
@@ -215,7 +216,7 @@ nav.panelNav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 150px;
+    gap: 75px;
 }
 
 .dashHeader {
